# controld

./: CMakeLists.txt  Makefile  README.md  meson.build  meson_options.txt
src/: controlctl.c  controld.c
units/: app.service  db.service
